--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,11 +13,12 @@ env:
   OWNER: "ricjuanflores"
 
 jobs:
-
-  uses: ricjuanflores/subauto/.github/workflows/test.yaml@main
+  unit-test:
+    uses: ricjuanflores/subauto/.github/workflows/test.yaml@main
 
   details:
     runs-on: ubuntu-latest
+    needs: unit-test
     outputs:
       new_version: ${{ steps.release.outputs.new_version }}
       suffix: ${{ steps.release.outputs.suffix }}
