--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,23 +7,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: 3.11
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
-
-      - name: Run tests
-        run: |
-          uv sync --no-interaction --dev
+        uses: astral-sh/setup-uv@v5
 
       - name: Install ffmpeg
-        run: sudo apt-get install ffmpeg
+        run: sudo apt-get update && sudo apt-get install -y ffmpeg
 
-      - name: Run tests
+      - name: Install dependencies and run tests
         run: |
+          uv sync
           uv run pytest
